fix(tempoross): complete client-thread snapshot boundary